; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_OpenDir.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_OpenDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dir_path = common dso_local global i32 0, align 4
@filename_pattern = common dso_local global i32 0, align 4
@dp = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @Devices_OpenDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Devices_OpenDir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = load i32, i32* @dir_path, align 4
  %5 = load i32, i32* @filename_pattern, align 4
  %6 = call i32 @Util_splitpath(i8* %3, i32 %4, i32 %5)
  %7 = load i32*, i32** @dp, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32*, i32** @dp, align 8
  %11 = call i32 @closedir(i32* %10)
  br label %12

12:                                               ; preds = %9, %1
  %13 = load i32, i32* @dir_path, align 4
  %14 = call i32* @opendir(i32 %13)
  store i32* %14, i32** @dp, align 8
  %15 = load i32*, i32** @dp, align 8
  %16 = icmp ne i32* %15, null
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i32 @Util_splitpath(i8*, i32, i32) #1

declare dso_local i32 @closedir(i32*) #1

declare dso_local i32* @opendir(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
